--- a/index.html
+++ b/index.html
@@ -1,49 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travis Scott & Drake Music</title>
     <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
+</head>
+<body>
 
+    <header>
+        <div class="container">
+            <h1>Travis Scott & Drake Music</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Music</a></li>
+                    <li><a href="#">Artists</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-      <nav class="navbar navbar-expand-lg color">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Music</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Artist</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">Bio Of Artist</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link">Artists songs</a>
-              </li>
-            </ul>
-          </div>
+    <section class="hero">
+        <div class="container">
+          <img src="img/ab6761610000e5eb19c2790744c792d05570bb71.jpg">
+            <h2>Experience the Vibes of Travis Scott & Drake</h2>
+            <p>Discover their latest hits, albums, and collaborations.</p>
+            <a href="https://open.spotify.com/artist/3TVXtAsR1Inumwj472S9r4" class="btn">DRAKE</a>
+            <a href="https://open.spotify.com/artist/0Y5tJX1MQlPlqiwlOH1tJY" class="btn">TRAVIS SCOTT</a>
         </div>
-      </nav>
-      <div class="card" style="width: 23rem;">
-        <img src="img/GettyImages-1350328656.webp" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">Drake</p>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="img/travis-scott (1).jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <p class="card-text">travis scott</p>
-        </div>
-      </div>
+    </section>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <section class="featured-artists">
+        <div class="container">
+            <h2>Featured Artists</h2>
+            <div class="artist">
+                <img src="img/travis-scott (1).jpg" alt="Travis Scott">
+                <h3>Travis Scott</h3>
+                <p>Travis Scott, born Jacques Webster II in 1992, is an influential American rapper, singer, and producer known for his genre-defying music and energetic performances. Rising to fame with hits like "Sicko Mode," he's acclaimed for his unique blend of hip-hop, trap, and psychedelic sounds.</p>
+            </div>
+            <div class="artist">
+                <img src="img/GettyImages-1350328656.webp" alt="Drake">
+                <h3>Drake</h3>
+                <p>Drake, born Aubrey Drake Graham in 1986, is a Canadian rapper, singer, and songwriter. He gained recognition for his role on the TV show "Degrassi: The Next Generation" before transitioning to music. With chart-topping hits like "Hotline Bling" and "In My Feelings," Drake has become one of the best-selling artists of all time, known for his versatile style and emotional lyrics.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="upcoming-events">
+        <div class="container">
+            <h2>Upcoming Events</h2>
+            <div class="event">
+                <h3>Travis Scott - Astroworld Tour</h3>
+                <p>Date: August 15, 2024</p>
+                <p>Venue: Madison Square Garden, New York</p>
+            </div>
+            <div class="event">
+                <h3>Drake - Certified Lover Boy Tour</h3>
+                <p>Date: September 20, 2024</p>
+                <p>Venue: Staples Center, Los Angeles</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="music-player">
+        <div class="container">
+            <h2>Listen Now</h2>
+            <!-- Add your music player here -->
+        </div>
+    </section>
+
+   
+
+</body>
 </html>
