--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
             <h2>Listen Now</h2>
            <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+  <img src="img/81nFF-rXdRL._UF1000,1000_QL80_.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
   </div>
