--- a/index.html
+++ b/index.html
@@ -68,7 +68,36 @@
     <section class="music-player">
         <div class="container">
             <h2>Listen Now</h2>
-            <!-- Add your music player here -->
+            <div class="rows justify-content-center">
+                <div class="col 6">
+            <div class="card">
+                <img src="img/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col 6">
+              <div class="card" >
+                <img src="img/Travis_Scott_-_Astroworld (1).png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+        </div>
+              <div class="card" >
+                <img src="img/Scorpion_by_Drake.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+              <div class="card" >
+                <img src="img/Drake_-_Thank_Me_Later_cover.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
         </div>
     </section>
 
