--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travis Scott & Drake Music</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -52,28 +55,55 @@
     <section class="upcoming-events">
         <div class="container">
             <h2>Upcoming Events</h2>
-            <div class="event">
-                <h3>Travis Scott - Astroworld Tour</h3>
-                <p>Date: August 15, 2024</p>
-                <p>Venue: Madison Square Garden, New York</p>
-            </div>
-            <div class="event">
-                <h3>Drake - Certified Lover Boy Tour</h3>
-                <p>Date: September 20, 2024</p>
-                <p>Venue: Staples Center, Los Angeles</p>
+<div class="row justify-content-center">
+    <div class="col-6">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="img/Madison_Square_Garden_(MSG)_-_Full_(48124330357).jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Travis Scott - Astroworld Tour</h5>
+                      <p> Date: August 15, 2024.
+                        Venue: Madison Square Garden, New York</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="img/Staples-Center-in-Los-Angeles.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Drake - Certified Lover Boy Tour</h5>
+                      <p>Date: September 20, 2024
+                        Venue: Staples Center, Los Angeles</p>
+                    </div>
+                  </div>
+                  </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             </div>
         </div>
+    </div>
     </section>
 
     <section class="music-player">
         <div class="container">
             <h2>Listen Now</h2>
-            <div class="rows justify-content-center">
+            <div class="row justify-content-center">
                 <div class="col 6">
             <div class="card">
                 <img src="img/Travis_Scott_-_Birds_in_the_Trap_Sing_McKnight.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://open.spotify.com/album/42WVQWuf1teDysXiOupIZt" class="btn">Birds in The Trap Sing McKnight</a>
                 </div>
               </div>
             </div>
@@ -81,23 +111,26 @@
               <div class="card" >
                 <img src="img/Travis_Scott_-_Astroworld (1).png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="https://open.spotify.com/album/41GuZcammIkupMPKH2OJ6I" class="btn">ASTROWORLD</a>
                 </div>
               </div>
             </div>
         </div>
+        <div class="row justify-content-center">
+            <div class="col-6">
               <div class="card" >
                 <img src="img/Scorpion_by_Drake.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
+                  <a href="https://open.spotify.com/album/1ATL5GLyefJaxhQzSPVrLX" class="btn">Scorpion</a>                </div>
               </div>
+            </div>
+            <div class="col-6">
               <div class="card" >
                 <img src="img/Drake_-_Thank_Me_Later_cover.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
+                  <a href="https://open.spotify.com/album/6jlrjFR9mJV3jd1IPSplXU" class="btn">Thank Me Later</a>                </div>
               </div>
+            </div>
         </div>
     </section>
 
