--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="row justify-content-center">
             <div class="col-6">
               <div class="card" >
-                <img src="img/Scorpion_by_Drake.jpg" class="card-img-top" alt="...">
+                <img src="img/Scorpion_by_Drake.jpg" class="card-img-top" alt="Scorpion">
                 <div class="card-body">
                   <a href="https://open.spotify.com/album/1ATL5GLyefJaxhQzSPVrLX" class="btn">Scorpion</a>                </div>
               </div>
